@@ -52,7 +52,6 @@
 # define SKIP_LONG_DOUBLE /* long double not yet supported */
 # define SKIP_UNIVERSAL
 # define SKIP_MIXED /* mixing of declaration and other statements (C99 feature) not yet supported */
-# define SKIP_RESTRICT_PARAMETER /* bug #2538 */
 # define SKIP_STATIC_PARAMETER /* bug #2537 */
 # define SKIP_COMPOUND /* compound literals not yet supported */
 # define SKIP_VLA /* variable-length arrays not supported */
